@@ -9,9 +9,15 @@ import com.blog_application.exception.ResourceNotFoundException;
 import com.blog_application.model.Category;
 import com.blog_application.repository.CategoryRepository;
 import com.blog_application.service.CategoryService;
+import com.blog_application.util.responses.PaginatedResponse;
+import com.blog_application.util.utils.SortHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -68,13 +74,22 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
-    public List<CategoryBasicInfoDto> getAllCategoryBasicInfo() {
+    public PaginatedResponse<CategoryBasicInfoDto> getAllCategoryBasicInfo(int pageNumber, int pageSize, String sortBy, String sortDir) {
         logger.info("Fetching all category basic info");
-        List<Category> categories = categoryRepository.findAll();
-        logger.info("Total category basic info found : {}",categories.size());
-        return categories.stream()
+
+        Sort sort = SortHelper.getSortOrder(sortBy,sortDir);
+        Pageable pageable = PageRequest.of(pageNumber,pageSize,sort);
+        Page<Category> categoryPage = categoryRepository.findAll(pageable);
+
+        List<Category> categories = categoryPage.getContent();
+        List<CategoryBasicInfoDto> categoryGetDtoList = categories.stream()
                 .map(categoryMapper::toCategoryBasicInfoDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        PaginatedResponse<CategoryBasicInfoDto> paginatedResponse = new PaginatedResponse<>(
+                categoryGetDtoList,categoryPage.getSize(),categoryPage.getNumber(),categoryPage.getTotalPages(),categoryPage.getTotalElements(),categoryPage.isLast());
+        logger.info("Total category basic info found : {}",categories.size());
+        return paginatedResponse;
     }
 
     @Override
@@ -94,13 +109,22 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
-    public List<CategoryGetDto> getAllCategories() {
+    public PaginatedResponse<CategoryGetDto> getAllCategories(int pageNumber, int pageSize, String sortBy, String sortDir) {
         logger.info("Fetching all categories");
-        List<Category> categories = categoryRepository.findAll();
-        logger.info("Total categories found : {}",categories.size());
-        return categories.stream()
+
+        Sort sort = SortHelper.getSortOrder(sortBy,sortDir);
+        Pageable pageable = PageRequest.of(pageNumber,pageSize,sort);
+        Page<Category> categoryPage = categoryRepository.findAll(pageable);
+
+        List<Category> categories = categoryPage.getContent();
+        List<CategoryGetDto> categoryGetDtoList = categories.stream()
                 .map(categoryMapper::toCategoryGetDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        PaginatedResponse<CategoryGetDto> paginatedResponse = new PaginatedResponse<>(
+                categoryGetDtoList,categoryPage.getSize(),categoryPage.getNumber(),categoryPage.getTotalPages(),categoryPage.getTotalElements(),categoryPage.isLast());
+        logger.info("Total categories found : {}",categories.size());
+        return paginatedResponse;
     }
 
     @Override
